parser/src/snapshots/rustpython_parser__string__tests__fstring_parse_self_documenting_base.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "user=",
                ),
                kind: None,
                range: 0..10,
            },
        ),
    },
    Attributed {
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "",
                ),
                kind: None,
                range: 0..10,
            },
        ),
    },
    Attributed {
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Attributed {
                    custom: (),
                    node: Name(
                        ExprName {
                            id: Identifier(
                                "user",
                            ),
                            ctx: Load,
                            range: 3..7,
                        },
                    ),
                },
                conversion: Int(
                    114,
                ),
                format_spec: None,
                range: 0..10,
            },
        ),
    },
]
