parser/src/snapshots/rustpython_parser__string__tests__fstring_parse_self_documenting_base_more.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Constant(
        ExprConstant {
            value: Str(
                "mix ",
            ),
            kind: None,
            range: 0..38,
        },
    ),
    Constant(
        ExprConstant {
            value: Str(
                "user=",
            ),
            kind: None,
            range: 0..38,
        },
    ),
    Constant(
        ExprConstant {
            value: Str(
                "",
            ),
            kind: None,
            range: 0..38,
        },
    ),
    FormattedValue(
        ExprFormattedValue {
            value: Name(
                ExprName {
                    id: Identifier(
                        "user",
                    ),
                    ctx: Load,
                    range: 7..11,
                },
            ),
            conversion: Int(
                114,
            ),
            format_spec: None,
            range: 0..38,
        },
    ),
    Constant(
        ExprConstant {
            value: Str(
                " with text and ",
            ),
            kind: None,
            range: 0..38,
        },
    ),
    Constant(
        ExprConstant {
            value: Str(
                "second=",
            ),
            kind: None,
            range: 0..38,
        },
    ),
    Constant(
        ExprConstant {
            value: Str(
                "",
            ),
            kind: None,
            range: 0..38,
        },
    ),
    FormattedValue(
        ExprFormattedValue {
            value: Name(
                ExprName {
                    id: Identifier(
                        "second",
                    ),
                    ctx: Load,
                    range: 29..35,
                },
            ),
            conversion: Int(
                114,
            ),
            format_spec: None,
            range: 0..38,
        },
    ),
]
