parser/src/snapshots/rustpython_parser__string__tests__fstring_parse_self_documenting_format.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Constant(
        ExprConstant {
            value: Str(
                "user=",
            ),
            kind: None,
            range: 0..14,
        },
    ),
    Constant(
        ExprConstant {
            value: Str(
                "",
            ),
            kind: None,
            range: 0..14,
        },
    ),
    FormattedValue(
        ExprFormattedValue {
            value: Name(
                ExprName {
                    id: Identifier(
                        "user",
                    ),
                    ctx: Load,
                    range: 3..7,
                },
            ),
            conversion: Int(
                0,
            ),
            format_spec: Some(
                JoinedStr(
                    ExprJoinedStr {
                        values: [
                            Constant(
                                ExprConstant {
                                    value: Str(
                                        ">10",
                                    ),
                                    kind: None,
                                    range: 0..14,
                                },
                            ),
                        ],
                        range: 0..14,
                    },
                ),
            ),
            range: 0..14,
        },
    ),
]
