parser/src/snapshots/rustpython_parser__string__tests__parse_f_string_concat_2.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            value: JoinedStr(
                ExprJoinedStr {
                    values: [
                        Constant(
                            ExprConstant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                                range: 0..17,
                            },
                        ),
                    ],
                    range: 0..17,
                },
            ),
            range: 0..17,
        },
    ),
]
