parser/src/snapshots/rustpython_parser__string__tests__parse_f_string_concat_3.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            value: JoinedStr(
                ExprJoinedStr {
                    values: [
                        Constant(
                            ExprConstant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                                range: 0..22,
                            },
                        ),
                        FormattedValue(
                            ExprFormattedValue {
                                value: Constant(
                                    ExprConstant {
                                        value: Str(
                                            "!",
                                        ),
                                        kind: None,
                                        range: 17..20,
                                    },
                                ),
                                conversion: Int(
                                    0,
                                ),
                                format_spec: None,
                                range: 9..22,
                            },
                        ),
                    ],
                    range: 0..22,
                },
            ),
            range: 0..22,
        },
    ),
]
