parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_escaped_brackets.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Constant(
        ExprConstant {
            range: 0..10,
            value: Str(
                "\\{x\\}",
            ),
            kind: None,
        },
    ),
]
